--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 				<br>
 				<br>
 				<!-- Gambar Deskripsi Aplikasi -->
-				<img src={{ url_for('static', filename='/images/app-display.png') }} width="500" ></img>
+				<img src={{ url_for('static', filename='/images/app-display.PNG') }} width="500" ></img>
 			</div>
 		</div>
 	</div>
